syntax = "proto3";
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
string request  = 1;
}

// The response message containing the greetings
message HelloReply {
  string reply  = 1;
}